salesforce/force-app/main/default/objects/Case/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEAVER</fullName>
            </value>
            <value>
                <fullName>BOX ELDER</fullName>
            </value>
            <value>
                <fullName>CACHE</fullName>
            </value>
            <value>
                <fullName>CARBON</fullName>
            </value>
            <value>
                <fullName>DAGGETT</fullName>
            </value>
            <value>
                <fullName>DAVIS</fullName>
            </value>
            <value>
                <fullName>DUCHESNE</fullName>
            </value>
            <value>
                <fullName>EMERY</fullName>
            </value>
            <value>
                <fullName>GARFIELD</fullName>
            </value>
            <value>
                <fullName>GRAND</fullName>
            </value>
            <value>
                <fullName>IRON</fullName>
            </value>
            <value>
                <fullName>JUAB</fullName>
            </value>
            <value>
                <fullName>KANE</fullName>
            </value>
            <value>
                <fullName>MILLARD</fullName>
            </value>
            <value>
                <fullName>MORGAN</fullName>
            </value>
            <value>
                <fullName>PIUTE</fullName>
            </value>
            <value>
                <fullName>RICH</fullName>
            </value>
            <value>
                <fullName>SALT LAKE</fullName>
            </value>
            <value>
                <fullName>SAN JUAN</fullName>
            </value>
            <value>
                <fullName>SANPETE</fullName>
            </value>
            <value>
                <fullName>SEVIER</fullName>
            </value>
            <value>
                <fullName>SUMMIT</fullName>
            </value>
            <value>
                <fullName>TOOELE</fullName>
            </value>
            <value>
                <fullName>UINTAH</fullName>
            </value>
            <value>
                <fullName>UTAH</fullName>
            </value>
            <value>
                <fullName>WASATCH</fullName>
            </value>
            <value>
                <fullName>WASHINGTON</fullName>
            </value>
            <value>
                <fullName>WAYNE</fullName>
            </value>
            <value>
                <fullName>WEBER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>