salesforce/force-app/main/default/objects/Case/fields/Highway__c.field-meta.xml
<CustomField>
    <fullName>Highway__c</fullName>
    <label>Highway</label>
    <length>40</length>
    <type>Text</type>
</CustomField>