salesforce/force-app/main/default/objects/Case/fields/Indian_Land__c.field-meta.xml
<CustomField>
    <fullName>Indian_Land__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indian Land</label>
    <type>Checkbox</type>
</CustomField>