salesforce/force-app/main/default/objects/Case/fields/Land_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Land_Ownership__c</fullName>
    <label>Land Ownership</label>
    <length>40</length>
    <type>Text</type>
</CustomField>