salesforce/force-app/main/default/objects/Case/fields/Mile_Marker__c.field-meta.xml
<CustomField>
    <fullName>Mile_Marker__c</fullName>
    <label>Mile Marker</label>
    <length>80</length>
    <type>Text</type>
</CustomField>