salesforce/force-app/main/default/objects/Case/fields/Nearest_Town_City__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Town_City__c</fullName>
    <label>Nearest Town / City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABRAHAM</fullName>
            </value>
            <value>
                <fullName>ADAMSVILLE</fullName>
            </value>
            <value>
                <fullName>ALPINE</fullName>
            </value>
            <value>
                <fullName>ALTA</fullName>
            </value>
            <value>
                <fullName>ALTAMONT</fullName>
            </value>
            <value>
                <fullName>ALTON</fullName>
            </value>
            <value>
                <fullName>ALTONAH</fullName>
            </value>
            <value>
                <fullName>AMALGA</fullName>
            </value>
            <value>
                <fullName>AMERICAN FORK</fullName>
            </value>
            <value>
                <fullName>ANETH</fullName>
            </value>
            <value>
                <fullName>ANGLE</fullName>
            </value>
            <value>
                <fullName>ANNABELLA</fullName>
            </value>
            <value>
                <fullName>ANTIMONY</fullName>
            </value>
            <value>
                <fullName>APPLE VALLEY</fullName>
            </value>
            <value>
                <fullName>ARAGONITE</fullName>
            </value>
            <value>
                <fullName>ARCADIA</fullName>
            </value>
            <value>
                <fullName>AURORA</fullName>
            </value>
            <value>
                <fullName>AUSTIN</fullName>
            </value>
            <value>
                <fullName>AVON</fullName>
            </value>
            <value>
                <fullName>AXTELL</fullName>
            </value>
            <value>
                <fullName>BALLARD</fullName>
            </value>
            <value>
                <fullName>BAUER</fullName>
            </value>
            <value>
                <fullName>BEAR RIVER CITY</fullName>
            </value>
            <value>
                <fullName>BEAVER</fullName>
            </value>
            <value>
                <fullName>BEAVER DAM</fullName>
            </value>
            <value>
                <fullName>BENSON</fullName>
            </value>
            <value>
                <fullName>BERYL</fullName>
            </value>
            <value>
                <fullName>BICKNELL</fullName>
            </value>
            <value>
                <fullName>BIG WATER</fullName>
            </value>
            <value>
                <fullName>BIRDSEYE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>