salesforce/force-app/main/default/objects/Case/fields/Utm_E_X_6_dgts__c.field-meta.xml
<CustomField>
    <fullName>Utm_E_X_6_dgts__c</fullName>
    <label>Utm E - X (6 dgts)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>