salesforce/force-app/main/default/objects/Case/fields/Utm_N_Y_7_dgts__c.field-meta.xml
<CustomField>
    <fullName>Utm_N_Y_7_dgts__c</fullName>
    <label>Utm N - Y (7 dgts)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>